# aria

./: Cargo.toml  README.md
agent/: Cargo.toml
agent/src/: graph.rs  lib.rs
agent/src/graph/: iter.rs  mod.rs  models.rs  runner.rs
agent/src/graph/nodes/: call_tools.rs  end.rs  mod.rs  model_request.rs  start.rs  user_request.rs
cli/: Cargo.toml
cli/src/: main.rs  stream_wrapper.rs
config/: Cargo.toml
config/src/: error.rs  lib.rs  models.rs
core/: Cargo.toml
providers/: Cargo.toml
providers/src/: claude.rs  lib.rs  models.rs
providers/src/anthropic/: lib.rs  mod.rs  models.rs
providers/src/claude/: lib.rs  mod.rs  models.rs
tools/: Cargo.toml
tools/src/: lib.rs  models.rs
tools/src/tool_functions/: list_files.rs  mod.rs  read_file.rs  run_command.rs  tree.rs  write_file.rs
tools/src/tool_functions/list_files/: mod.rs  prompt.md
tools/src/tool_functions/read_file/: lib.rs  mod.rs  prompt.md
tools/src/tool_functions/run_command/: lib.rs  mod.rs  prompt.md
tools/src/tool_functions/tree/: lib.rs  mod.rs  prompt.md
tools/src/tool_functions/write_file/: mod.rs  prompt.md
