[workspace]
members = ["agent", "cli", "providers", "tools", "config"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = { version = "1.0.98" }
serde_json = { version = "1.0.140" }
serde_with = { version = "3.12.0" }
futures-util = { version = "0.3.30" }
