[package]
name = "aria"
description = "Agentic Reasoning and Implementation Assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.36", features = ["derive"] }
agent = { path = "../agent" }
providers = { path = "../providers" }
tokio = { workspace = true }
