[package]
name = "providers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
reqwest = { version = "0.12.15", features = ["json"] }
reqwest-eventsource = "0.4.0"
futures-util = "0.3.30"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tools = { path = "../tools" }
serde_with = { workspace = true }
