[package]
name = "providers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
futures-util = { workspace = true }
reqwest = { version = "0.12.15", features = ["json"] }
reqwest-eventsource = "0.6.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true }
tools = { path = "../tools" }
